Seperate surnames of alters
